# csci-6234

./: .gitignore  README.md
.cursor/rules/: general-rules.mdc
Analysis/: CreateAuction.puml  TrackHighestBidAndWinner.puml  ViewCompletedAuctions.puml
Project/: environment.yml
Project/api/: auth.py  database.py  main.py  models.py  populate_data.py  pyproject.toml  schemas.py
Project/api/routes/: auctions.py  auth.py  customers.py  managers.py
Project/api/services/: auction.py
Project/cli/: api_client.py  main.py  pyproject.toml
Project/cli/commands/: auth.py  customer.py  manager.py
Project/data/: auction_house.db
UML/: activity.puml  assignmentAUseCase.puml  collaboration.puml
plantUML/: class.puml  component.puml  state.puml  useCase.puml
